Se agrego nueva URL del servicio de  Reportes

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -352,7 +352,7 @@
                 var grupo = urlParams.get('grupo');
                 var hiddenElement = document.createElement('a');
                 console.log(grupo);
-                hiddenElement.href = "http://reportes.e-squadron.com.mx/reporte-informacion?grupo=".concat(grupo);
+                hiddenElement.href = "http://www.reportesdesarrollo.e-squadron.com.mx/reporte-nivel?grupos=".concat(grupo);
                 hiddenElement.click();
 
             }
