--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -342,7 +342,7 @@
                 var hiddenElement = document.createElement('a');
                 console.log(grupo);
                 UIkit.notification("The document is being downloaded, please wait");
-                hiddenElement.href = "http://reportes.e-squadron.com.mx/reporte-alumnos?grupo=".concat(grupo);
+                hiddenElement.href = "http://www.reportesdesarrollo.e-squadron.com.mx/reporte-alumnos?grupo=".concat(grupo);
                 hiddenElement.click();
             }
         </script>
