admin alumnos reporte password

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -324,7 +324,7 @@
                 var hiddenElement = document.createElement('a');
                 // console.log(grupo);
                 UIkit.notification("The document is being downloaded, please wait");
-                hiddenElement.href = "http://www.reportesdesarrollo.e-squadron.com.mx/reporte-nivel?grupos=".concat(grupo);
+                hiddenElement.href = "http://www.reportesdesarrollo.e-squadron.com.mx/reporte-informacion?grupo=".concat(grupo);
                 hiddenElement.click();
 
             }
