--- a/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
@@ -141,6 +141,9 @@
                 </div>
             </div>
         </div>
+        <div class="uk-flex uk-flex-right uk-margin-top">
+            <h:button styleClass="uk-button uk-button-primary" value="#{boton['back']}" outcome="regresar"/>
+        </div>
         <!--  Modal nuevo, actualizar ciclo escolar  -->
         <h:panelGroup layout="block" id="modal-escuela" pt:uk-modal="">
             <div class="uk-modal-dialog uk-margin-auto-vertical">
