--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -147,6 +147,10 @@
             </div>
         </div>
 
+        <div class="uk-flex uk-flex-right uk-margin-top">
+            <h:button styleClass="uk-button uk-button-primary" value="#{boton['back']}" outcome="regresar"/>
+        </div>
+
         <h:panelGroup layout="block" id="modal-profesor" styleClass="uk-modal-container" pt:uk-modal="">
             <div class="uk-modal-dialog uk-margin-auto-vertical">
                 <h:form id="formulario-modal-profesor" styleClass="uk-form-stacked">
