--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -117,19 +117,19 @@
 <!--                                                    <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/decarga.svg" class="uk-svg" alt=""/>-->
                                                 </span>
                                                 <div uk-dropdown="">
-                                                    <span>Grammar</span>
+                                                    <span class="uk-text-capitalize">#{profesor['activity.grammar']}</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
                                                 <span data-uk-tooltip="title: #{profesor['didactic.guide']}" uk-icon="icon: file-text"/>
                                                 <div uk-dropdown="">
-                                                    <span>Lesson Plan</span>
+                                                    <span class="uk-text-capitalize">#{profesor['didactic.guide']}</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
                                                 <span data-uk-tooltip="title: #{profesor['activity.cards']}" uk-icon="icon: commenting"/>
                                                 <div uk-dropdown="">
-                                                    <span>Disussion Cards</span>
+                                                    <span class="uk-text-capitalize">#{profesor['activity.cards']}</span>
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
