se resuelven incidencias de traduccion en el modulo de profesor

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -104,6 +104,12 @@
                 </p>
             </div>
         </h:panelGroup>
+        <script type="text/javascript">
+           let deficiente = "#{profesor['deficit']}";
+           let regular = "#{profesor['regular']}";
+           let bueno = "#{profesor['good']}";
+           let excelente = "#{profesor['excellent']}";
+        </script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/gramatica.js"></script>
     </ui:define>
 </ui:composition>
