se resuelven incidencias en traducir un modal de calificacion-mapamental

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -184,7 +184,7 @@
 
             function validaComentario() {
                 if (document.getElementById('formulario:comentario').value === '') {
-                    UIkit.modal.alert('Es necesario escribir un comentario antes de enviar la calificacion');
+                    UIkit.modal.alert("#{profesor['you.need.to.write.a.comment.before.submitting.the.rating']}");
                     return false;
                 }
                 return true;
