se aplica estilo de cambio de color a rojo a los letreros de se necesita un valor

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -114,7 +114,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="dos" styleClass=""/>
+                                <h:message for="dos" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -125,7 +125,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="tres" styleClass=""/>
+                                <h:message for="tres" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -136,7 +136,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="seis" styleClass=""/>
+                                <h:message for="seis" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -147,7 +147,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="cinco" styleClass=""/>
+                                <h:message for="cinco" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -158,7 +158,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="cuatro" styleClass=""/>
+                                <h:message for="cuatro" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -169,7 +169,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="siete" styleClass=""/>
+                                <h:message for="siete" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -180,7 +180,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="ocho" styleClass=""/>
+                                <h:message for="ocho" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
@@ -191,7 +191,7 @@
                                                  pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="nueve" styleClass=""/>
+                                <h:message for="nueve" styleClass="mensaje-alerta-11"/>
                             </div>
                         </div>
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
