--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -93,7 +93,7 @@
                                          pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="uno" styleClass=""/>
+                            <h:message for="uno" styleClass="uno"/>
                         </div>
                         <div class="caja-14-dos">
                             <h:inputTextarea id="dos"
@@ -103,7 +103,7 @@
                                          pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="dos" styleClass=""/>
+                            <h:message for="dos" styleClass="dos"/>
                         </div>
                         <div class="caja-14-tres">
                             <h:inputTextarea id="tres"
@@ -113,7 +113,7 @@
                                          pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="tres" styleClass=""/>
+                            <h:message for="tres" styleClass="tres"/>
                         </div>
                         <div class="caja-14-cuatro">
                             <h:inputTextarea id="cuatro"
@@ -123,7 +123,7 @@
                                              pt:maxlength="150">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="cuatro" styleClass=""/>
+                            <h:message for="cuatro" styleClass="cuatro"/>
                         </div>
 
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
