--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -196,5 +196,10 @@
                     </div>
             </div>
     </ui:define>
+    <ui:define name="enlaces-js">
+        <script type="application/javascript">
+            var botonEnviar = document.que
+        </script>
+    </ui:define>
 </ui:composition>
 </html>
