--- a/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
@@ -116,7 +116,7 @@
                                              pt:maxlength="70">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="dos" styleClass=""/>
+                                <h:message for="dos" styleClass="mensaje-mapa-4"/>
                             </div>
                             <div class="pop-art-nube-grande uk-position-relative ">
                                 <h:inputTextarea styleClass="posicion-texarea-comparar uk-textarea"
@@ -127,7 +127,7 @@
                                                  pt:maxlength="70">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="tres" styleClass=""/>
+                                <h:message for="tres" styleClass="mensaje-mapa-4"/>
                             </div>
 
                         </div>
