--- a/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
@@ -84,6 +84,7 @@
                             <h3 class="subtitulo-6">Fact:</h3>
                             <div class="respuestas uk-padding-small">
                                 <h:outputLabel for="facta" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
+                                <h:message for="facta" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="facta"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
@@ -92,8 +93,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="facta" styleClass=""/>
                                 <h:outputLabel for="factb" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"/>
+                                <h:message for="factb" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="factb"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
@@ -102,8 +103,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="factb" styleClass=""/>
                                 <h:outputLabel for="factc" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"/>
+                                <h:message for="factc" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="factc"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
@@ -112,8 +113,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="factc" styleClass=""/>
                                 <h:outputLabel for="factd" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"/>
+                                <h:message for="factd" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="factd"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
@@ -122,8 +123,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="factd" styleClass=""/>
                                 <h:outputLabel for="facte" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"/>
+                                <h:message for="facte" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="facte"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
@@ -132,8 +133,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="facte" styleClass=""/>
                                 <h:outputLabel for="factf" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"/>
+                                <h:message for="factf" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="factf"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
@@ -142,8 +143,8 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="factf" styleClass=""/>
                                 <h:outputLabel for="factg" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"/>
+                                <h:message for="factg" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="factg"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
@@ -152,13 +153,13 @@
                                              pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="factg" styleClass=""/>
                             </div>
                         </div>
                         <div class="uk-width-3-5@m opinion">
                             <h3 class="subtitulo-6">Opinion:</h3>
                             <div class="respuestas uk-padding-small">
                                 <h:outputLabel for="opiniona" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"/>
+                                <h:message for="opiniona" styleClass="mensaje-mapa"  style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opiniona"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
@@ -167,8 +168,8 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opiniona" styleClass=""/>
                                 <h:outputLabel for="opinionb" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}"/>
+                                <h:message for="opinionb" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opinionb"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
@@ -177,8 +178,8 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opinionb" styleClass=""/>
                                 <h:outputLabel for="opinionc" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}"/>
+                                <h:message for="opinionc" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opinionc"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
@@ -187,8 +188,8 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opinionc" styleClass=""/>
                                 <h:outputLabel for="opiniond" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].pregunta}"/>
+                                <h:message for="opiniond" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opiniond"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[10].respuesta}"
@@ -197,8 +198,8 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opiniond" styleClass=""/>
                                 <h:outputLabel for="opinione" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[11].pregunta}"/>
+                                <h:message for="opinione" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opinione"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[11].respuesta}"
@@ -207,8 +208,9 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opinione" styleClass=""/>
+
                                 <h:outputLabel for="opinionf" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[12].pregunta}"/>
+                                <h:message for="opinionf" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opinionf"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[12].respuesta}"
@@ -217,8 +219,8 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opinionf" styleClass=""/>
                                 <h:outputLabel for="opiniong" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[13].pregunta}"/>
+                                <h:message for="opiniong" styleClass="mensaje-mapa" style="margin-left:8px"/>
                                 <h:inputText styleClass="uk-input"
                                              id="opiniong"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[13].respuesta}"
@@ -227,7 +229,6 @@
                                              pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="opiniong" styleClass=""/>
                             </div>
 
                         </div>
